removed extra div within fivedaycards and fixed formatting; they now display five across and with proper spacing and padding

--- a/assets/style.css
+++ b/assets/style.css
@@ -4,14 +4,11 @@ h1 {
 h2 {
     font-size: 30px;
 }
-
-.card-body{
-   
-}
-.prevSearch {
-    margin: 10px;
-}
+ 
 .fiveDayCard {
-    margin: 10px;
-    justify-content: right;
+    width:20%;
+    padding: 10px;
+}
+.card{
+    flex-direction: row;
 }
